# binja_wasm

./: Cargo.toml  README.md  build.rs
src/: binja.rs  lib.rs  util.rs
src/binja/: arch.rs  func_parse.rs  module_data.rs  parse.rs  view.rs  view_type.rs
src/binja/arch/: arch.rs  insn_info.rs  insn_text.rs
src/binja/parse/: func_parse.rs  module_data.rs  module_parse.rs
src/util/: arc_identity.rs  bin_util.rs
